# InteractiveAnatomyChat

./: .gitignore  README.md
PointLLMFinetuning/: FreezeVicuna.ipynb  MIGRATION_GUIDE.md  README.md  SETUP.md  check_gpu.py  config.py  dataset.py  encoder_proj_LoRA_finetune.py  encoder_proj_llm_finetune.py  encoder_proj_llm_finetune_ar_usage.py  encoder_proj_llm_finetune_ddp.py  encoder_proj_tune.py  encoder_proj_tune_ddp.py  evaluation.py  main_finetune.ipynb  main_finetune.py  model_utils_encoder_proj.py  model_utils_full.py  model_utils_proj_llm.py  model_utils_proj_lora.py  model_utils_proj_only.py  proj_tune_and_LoRA.ipynb  proj_tune_and_LoRA.py  run_encoder_proj_llm_finetune.sh  run_encoder_proj_llm_finetune_ar_usage.sh  run_encoder_proj_lora_finetune.sh  run_encoder_proj_tune.sh  run_encoder_proj_tune_dpp_training.sh  run_main_training.sh  run_main_training_no_flash.sh  run_proj_llm_ddp.sh  run_proj_lora_training.sh  run_proj_lora_training_no_flash.sh  trainer.py  trainer_LoRA.py  trainer_encoder_proj.py  trainer_encoder_proj_ddp.py  trainer_proj_llm_ddp.py
PointLLMFinetuning/PointLLM/: pyproject.toml
PointLLMFinetuning/PointLLM/pointllm/eval/: chat_gradio_finetuning.py  chat_gradio_finetuning_LoRA.py  chat_gradio_finetuning_encoder_proj.py  chat_gradio_finetuning_encoder_proj_lora.py  chat_gradio_full_llm_finetune.py  full_llm_tune_eval_integrated_grad.py  full_llm_tune_eval_y_x_grad.py  visualizeIntegrateGradient.py
PointLLMFinetuning/PointLLM/pointllm/eval/grad_analyze_from_point.py/: gradient_generate.py
app/: JSON_DATA_STRUCTURE.md  README.md
(+84 files in other folders)
